--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,28 +6,94 @@
 	font-family: 'Roboto', sans-serif;
 }
 body {
+	background: rgb(173, 216, 230);
+	width: 100vw;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	background: rgb(100, 100, 100);
-
+	justify-items: center;
 }
-.comparison{
+.navbar{
+	width: 100vw;
+	background: lightcoral;
 	display: flex;
-
+	flex-direction: column;
+	align-items: center;
 }
-.btn-group{
-	display: flex;
-
-}
-.comparison{
-	font-size: 2rem;
+header{
+	background-color: lightpink;
+	font-size: clamp(1rem,4.5vw,3rem);
+	color: black;
 	font-weight: bold;
-}
-.btn-group button{
-	margin: .5rem;
 	padding: .5rem;
+	border-radius: .5rem;
+	margin: .5rem;
+}
+.sliderComplxArea{
+	margin: .4rem;
+	padding: .2rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;	
+	background: rgb(252, 133, 86);
+	border-radius: .5rem;
+	border-radius: .5rem;
+	border-style: solid;
+	border-color: red;
 	font-weight: bold;
-	
+
+}
+
+button{
+	border-style: none;
+	padding: .5rem;
+	background: rgb(252, 169, 136);
+	font-weight: bold;
+	border-radius: .5rem;
+	border-style: solid;
+	border-color: darkorange;
+}
+button:hover{
+	cursor: pointer;
+	background: darkorange;
+	color: white;
+	font-weight: bold;
+	border-radius: .5rem;
+}
+
+
+.sliders{
+	flex: 1;
+	padding: .5rem;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-items: center;
+}
+.comparison{
+	display: flex;
+}
+.timeComplex{
+	flex: 2;
+	margin: .5rem;
+	background: rgb(241, 83, 83);
+	padding: .5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-around;
+	border-style: solid;
+	border-width: .2rem;
+	border-color: red;
+	border-radius: .5rem;
+}
+.bigoData{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+input{
+	cursor: pointer;
 }
