--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,99 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap");
 
-*{
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 body {
-	background: rgb(173, 216, 230);
-	width: 100vw;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-items: center;
+  background: rgb(173, 216, 230);
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
 }
-.navbar{
-	width: 100vw;
-	background: lightcoral;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+a {
+  text-decoration: none;
+  color: black;
 }
-header{
-	background-color: lightpink;
-	font-size: clamp(1rem,4.5vw,3rem);
-	color: black;
-	font-weight: bold;
-	padding: .5rem;
-	border-radius: .5rem;
-	margin: .5rem;
+.navbar {
+  width: 100vw;
+  background: lightcoral;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.sliderComplxArea{
-	margin: .4rem;
-	padding: .2rem;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;	
-	background: rgb(252, 133, 86);
-	border-radius: .5rem;
-	border-radius: .5rem;
-	border-style: solid;
-	border-color: red;
-	font-weight: bold;
-
+header {
+  background-color: lightpink;
+  font-size: clamp(1rem, 4.5vw, 3rem);
+  font-weight: bold;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  margin: 0.5rem;
+  transition: 200ms ease-in-out;
 }
-
-button{
-	border-style: none;
-	padding: .5rem;
-	background: rgb(252, 169, 136);
-	font-weight: bold;
-	border-radius: .5rem;
-	border-style: solid;
-	border-color: darkorange;
-}
-button:hover{
-	cursor: pointer;
-	background: darkorange;
-	color: white;
-	font-weight: bold;
-	border-radius: .5rem;
+.sliderComplxArea {
+  margin: 0.4rem;
+  padding: 0.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background: rgb(252, 133, 86);
+  border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: red;
+  font-weight: bold;
+  transition: 200ms ease-in-out;
 }
 
+button {
+  border-style: none;
+  padding: 0.5rem;
+  background: rgb(252, 169, 136);
+  font-weight: bold;
+  border-radius: 0.5rem;
+  border-style: solid;
+  border-color: darkorange;
+  transition: 200ms ease-in-out;
+}
+button:hover {
+  cursor: pointer;
+  background: darkorange;
+  color: white;
+  font-weight: bold;
+  border-radius: 0.5rem;
+}
 
-.sliders{
-	flex: 1;
-	padding: .5rem;
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-items: center;
+.sliders {
+  flex: 1;
+  padding: 0.5rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  transition: 200ms ease-in-out;
 }
-.comparison{
-	display: flex;
+.comparison {
+  display: flex;
+  transition: 200ms ease-in-out;
 }
-.timeComplex{
-	flex: 2;
-	margin: .5rem;
-	background: rgb(241, 83, 83);
-	padding: .5rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: space-around;
-	border-style: solid;
-	border-width: .2rem;
-	border-color: red;
-	border-radius: .5rem;
+.timeComplex {
+  flex: 2;
+  margin: 0.5rem;
+  background: rgb(241, 83, 83);
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border-style: solid;
+  border-width: 0.2rem;
+  border-color: red;
+  border-radius: 0.5rem;
+  transition: 200ms ease-in-out;
 }
-.bigoData{
-	width: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
+.bigoData {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  transition: 200ms ease-in-out;
 }
-input{
-	cursor: pointer;
+input {
+  cursor: pointer;
+}
+header:hover {
+  /* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
+  box-shadow: rgba(175, 42, 42, 0.623) 0px 5px 15px;
 }
