--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,9 +5,12 @@
   padding: 0;
   font-family: "Roboto", sans-serif;
 }
+
 body {
   background: rgb(173, 216, 230);
-  width: 100vw;
+  width: 100%;
+  height: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,7 +21,7 @@ a {
   color: black;
 }
 .navbar {
-  width: 100vw;
+  width: 100%;
   background: lightcoral;
   display: flex;
   flex-direction: column;
@@ -81,6 +84,8 @@ button:hover {
   transition: 200ms ease-in-out;
 }
 .timeComplex {
+  height: 8vh;
+  font-size: clamp(0.9rem, 2vw, 1rem);
   flex: 2;
   margin: 0.5rem;
   background: rgb(241, 83, 83);
@@ -95,6 +100,10 @@ button:hover {
   border-radius: 0.5rem;
   transition: 200ms ease-in-out;
 }
+.timeHeading {
+  font-size: clamp(1.5rem, 2vw, 2rem);
+}
+
 .bigoData {
   width: 100%;
   display: flex;
